--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/bs58": "^4.0.1",
+    "@types/node": "^14.0.13",
     "buefy": "^0.8.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
+    "js-sha256": "^0.9.0",
+    "moment": "^2.26.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
