--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "@types/bs58": "^4.0.1",
+    "@types/crypto-js": "^3.1.47",
     "@types/node": "^14.0.13",
+    "@waves/ts-lib-crypto": "^1.4.3",
+    "axios": "^0.19.2",
     "buefy": "^0.8.0",
     "core-js": "^3.6.5",
-    "crypto-js": "^4.0.0",
-    "js-sha256": "^0.9.0",
     "moment": "^2.26.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
