--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build --target lib --inline-vue",
+    "lint": "vue-cli-service lint",
+    "deploy": "vue-cli-service build --target lib --inline-vue && gh-pages -d dist"
   },
   "dependencies": {
     "@types/bs58": "^4.0.1",
